--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,7 @@
       <div class="profile-wrap">
         <div class="profile">
           {% if user and user.id %}
-          <div class="user-name">{{'안녕하세요! ' + user.nickName + '님'}}</div>
+          <div class="user-name">{{'안녕하세요! ' + user.nick + '님'}}</div>
           <input id="my-id" type="hidden" value="{{user.id}}" />
           <a id="my-profile" href="/profile" class="btn">내 프로필</a>
           <a id="logout" href="/auth/logout" class="btn">로그아웃</a>
